--- a/AVIRO/Utils/Base.lproj/LaunchScreen.storyboard
+++ b/AVIRO/Utils/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,25 +15,8 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Sm4-xy-N7v">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
-                            </imageView>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="Sm4-xy-N7v" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="IIk-e9-GUa"/>
-                            <constraint firstItem="Sm4-xy-N7v" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="J33-C4-Brb"/>
-                            <constraint firstItem="Sm4-xy-N7v" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Kla-ob-OQE"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Sm4-xy-N7v" secondAttribute="trailing" id="OIa-zd-lpM"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Sm4-xy-N7v" secondAttribute="bottom" id="YwD-tq-Zz8"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Sm4-xy-N7v" secondAttribute="trailing" id="kyj-BU-R5K"/>
-                            <constraint firstItem="Sm4-xy-N7v" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="paw-KE-s3C"/>
-                            <constraint firstItem="Sm4-xy-N7v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="r28-Qu-cTu"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -40,7 +24,4 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="LaunchScreen" width="375" height="812"/>
-    </resources>
 </document>
